[package]
name = "payment_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }
rust_decimal_macros = "1.37.1"
tokio = { version = "1.46.1", features = ["full"] }

[[bench]]
name = "payment_processing"
harness = false
